// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PDF builder characterization (golden snapshots) > buildChainOfCustodyDocument — static shape + footer 1`] = `
{
  "content": [
    {
      "layout": {
        "hLineWidth": "[Function]",
        "paddingBottom": "[Function]",
        "paddingLeft": "[Function]",
        "paddingRight": "[Function]",
        "paddingTop": "[Function]",
        "vLineWidth": "[Function]",
      },
      "margin": [
        0,
        0,
        0,
        10,
      ],
      "table": {
        "body": [
          [
            {
              "fillColor": "#0E7490",
              "margin": [
                10,
                8,
                10,
                8,
              ],
              "stack": [
                {
                  "bold": true,
                  "color": "#ffffff",
                  "fontSize": 16,
                  "margin": [
                    0,
                    0,
                    0,
                    0,
                  ],
                  "text": "FORENSIC CHAIN OF CUSTODY REPORT",
                },
                {
                  "columns": [
                    {
                      "color": "#ffffff",
                      "fontSize": 9,
                      "text": "Case Number: CASE-0042",
                    },
                    {
                      "alignment": "right",
                      "color": "#ffffff",
                      "fontSize": 9,
                      "text": "Generated: [timestamp]",
                    },
                  ],
                  "margin": [
                    0,
                    4,
                    0,
                    0,
                  ],
                },
              ],
            },
          ],
        ],
        "widths": [
          "*",
        ],
      },
    },
    {
      "layout": {
        "hLineColor": "[Function]",
        "hLineWidth": "[Function]",
        "vLineColor": "[Function]",
        "vLineWidth": "[Function]",
      },
      "margin": [
        0,
        0,
        0,
        10,
      ],
      "table": {
        "body": [
          [
            {
              "fillColor": "#FFF3CD",
              "margin": [
                8,
                6,
                8,
                6,
              ],
              "stack": [
                {
                  "bold": true,
                  "color": "#78350F",
                  "fontSize": 8,
                  "margin": [
                    0,
                    0,
                    0,
                    3,
                  ],
                  "text": "LEGAL NOTICE",
                },
                {
                  "color": "#78350F",
                  "fontSize": 7,
                  "lineHeight": 1.3,
                  "text": "This Chain of Custody record is maintained for forensic and legal purposes. All entries are immutable and cryptographically secured. Unauthorized modification or tampering with evidence may result in legal consequences.",
                },
              ],
            },
          ],
        ],
        "widths": [
          "*",
        ],
      },
    },
    {
      "layout": {
        "hLineColor": "[Function]",
        "hLineWidth": "[Function]",
        "vLineColor": "[Function]",
        "vLineWidth": "[Function]",
      },
      "margin": [
        0,
        0,
        0,
        10,
      ],
      "table": {
        "body": [
          [
            {
              "fillColor": "#EFF6FF",
              "margin": [
                8,
                6,
                8,
                6,
              ],
              "stack": [
                {
                  "bold": true,
                  "color": "#1E40AF",
                  "fontSize": 10,
                  "margin": [
                    0,
                    0,
                    0,
                    4,
                  ],
                  "text": "Summary",
                },
                {
                  "columns": [
                    {
                      "stack": [
                        {
                          "color": "#334155",
                          "fontSize": 9,
                          "margin": [
                            0,
                            0,
                            0,
                            3,
                          ],
                          "text": "Total Entries: 2",
                        },
                        {
                          "color": "#334155",
                          "fontSize": 9,
                          "text": "Action Categories: 2",
                        },
                      ],
                      "width": "*",
                    },
                    {
                      "stack": [
                        {
                          "color": "#334155",
                          "fontSize": 9,
                          "margin": [
                            0,
                            0,
                            0,
                            3,
                          ],
                          "text": "Unique Actors: 2",
                        },
                        {
                          "color": "#334155",
                          "fontSize": 9,
                          "text": "Date Range: Jun 01, 2026, 13:00 GMT+4 - Jun 02, 2026, 15:30 GMT+4",
                        },
                      ],
                      "width": "*",
                    },
                  ],
                },
              ],
            },
          ],
        ],
        "widths": [
          "*",
        ],
      },
    },
    {
      "margin": [
        0,
        0,
        0,
        10,
      ],
      "stack": [
        {
          "bold": true,
          "color": "#1e293b",
          "fontSize": 11,
          "margin": [
            0,
            0,
            0,
            6,
          ],
          "text": "Chain of Custody Entries",
        },
        {
          "layout": {
            "hLineColor": "[Function]",
            "hLineWidth": "[Function]",
            "paddingBottom": "[Function]",
            "paddingLeft": "[Function]",
            "paddingRight": "[Function]",
            "paddingTop": "[Function]",
            "vLineColor": "[Function]",
            "vLineWidth": "[Function]",
          },
          "table": {
            "body": [
              [
                {
                  "style": "tableHeader",
                  "text": "Entry #",
                },
                {
                  "style": "tableHeader",
                  "text": "Action Type",
                },
                {
                  "style": "tableHeader",
                  "text": "Description",
                },
                {
                  "style": "tableHeader",
                  "text": "Actor",
                },
                {
                  "style": "tableHeader",
                  "text": "Date/Time",
                },
                {
                  "style": "tableHeader",
                  "text": "Category",
                },
              ],
              [
                {
                  "alignment": "center",
                  "bold": true,
                  "color": "#1e293b",
                  "fillColor": "#ffffff",
                  "fontSize": 7,
                  "margin": [
                    2,
                    3,
                    2,
                    3,
                  ],
                  "text": "#0001",
                },
                {
                  "bold": true,
                  "color": "#1e293b",
                  "fillColor": "#ffffff",
                  "fontSize": 7,
                  "margin": [
                    2,
                    3,
                    2,
                    3,
                  ],
                  "text": "Device Received",
                },
                {
                  "color": "#1e293b",
                  "fillColor": "#ffffff",
                  "fontSize": 7,
                  "margin": [
                    2,
                    3,
                    2,
                    3,
                  ],
                  "text": "Patient device received at intake.",
                },
                {
                  "color": "#1e293b",
                  "fillColor": "#ffffff",
                  "fontSize": 7,
                  "margin": [
                    2,
                    3,
                    2,
                    3,
                  ],
                  "text": "Lab Reception
(technician)",
                },
                {
                  "alignment": "center",
                  "color": "#64748b",
                  "fillColor": "#ffffff",
                  "fontSize": 7,
                  "margin": [
                    2,
                    3,
                    2,
                    3,
                  ],
                  "text": "Jun 01, 2026, 13:00 GMT+4",
                },
                {
                  "fillColor": "#ffffff",
                  "layout": {
                    "hLineWidth": "[Function]",
                    "paddingBottom": "[Function]",
                    "paddingLeft": "[Function]",
                    "paddingRight": "[Function]",
                    "paddingTop": "[Function]",
                    "vLineWidth": "[Function]",
                  },
                  "margin": [
                    2,
                    3,
                    2,
                    3,
                  ],
                  "table": {
                    "body": [
                      [
                        {
                          "alignment": "center",
                          "bold": true,
                          "color": "#334155",
                          "fillColor": "#D1FAE5",
                          "fontSize": 6,
                          "margin": [
                            2,
                            2,
                            2,
                            2,
                          ],
                          "text": "Creation",
                        },
                      ],
                    ],
                    "widths": [
                      "*",
                    ],
                  },
                },
              ],
              [
                {
                  "alignment": "center",
                  "bold": true,
                  "color": "#1e293b",
                  "fillColor": "#f8fafc",
                  "fontSize": 7,
                  "margin": [
                    2,
                    3,
                    2,
                    3,
                  ],
                  "text": "#0002",
                },
                {
                  "bold": true,
                  "color": "#1e293b",
                  "fillColor": "#f8fafc",
                  "fontSize": 7,
                  "margin": [
                    2,
                    3,
                    2,
                    3,
                  ],
                  "text": "Integrity Check",
                },
                {
                  "color": "#1e293b",
                  "fillColor": "#f8fafc",
                  "fontSize": 7,
                  "margin": [
                    2,
                    3,
                    2,
                    3,
                  ],
                  "text": "Hash verification passed.",
                },
                {
                  "color": "#1e293b",
                  "fillColor": "#f8fafc",
                  "fontSize": 7,
                  "margin": [
                    2,
                    3,
                    2,
                    3,
                  ],
                  "text": "QA Engineer
(technician)",
                },
                {
                  "alignment": "center",
                  "color": "#64748b",
                  "fillColor": "#f8fafc",
                  "fontSize": 7,
                  "margin": [
                    2,
                    3,
                    2,
                    3,
                  ],
                  "text": "Jun 02, 2026, 15:30 GMT+4",
                },
                {
                  "fillColor": "#f8fafc",
                  "layout": {
                    "hLineWidth": "[Function]",
                    "paddingBottom": "[Function]",
                    "paddingLeft": "[Function]",
                    "paddingRight": "[Function]",
                    "paddingTop": "[Function]",
                    "vLineWidth": "[Function]",
                  },
                  "margin": [
                    2,
                    3,
                    2,
                    3,
                  ],
                  "table": {
                    "body": [
                      [
                        {
                          "alignment": "center",
                          "bold": true,
                          "color": "#334155",
                          "fillColor": "#CCFBF1",
                          "fontSize": 6,
                          "margin": [
                            2,
                            2,
                            2,
                            2,
                          ],
                          "text": "Verification",
                        },
                      ],
                    ],
                    "widths": [
                      "*",
                    ],
                  },
                },
              ],
            ],
            "headerRows": 1,
            "widths": [
              38,
              65,
              "*",
              70,
              65,
              60,
            ],
          },
        },
      ],
    },
    {
      "margin": [
        0,
        0,
        0,
        10,
      ],
      "stack": [
        {
          "bold": true,
          "color": "#1e293b",
          "fontSize": 10,
          "margin": [
            0,
            0,
            0,
            4,
          ],
          "text": "Hash Verification",
        },
        {
          "layout": {
            "hLineColor": "[Function]",
            "hLineWidth": "[Function]",
            "vLineColor": "[Function]",
            "vLineWidth": "[Function]",
          },
          "table": {
            "body": [
              [
                {
                  "style": "tableHeader",
                  "text": "Entry #",
                },
                {
                  "style": "tableHeader",
                  "text": "Algorithm",
                },
                {
                  "style": "tableHeader",
                  "text": "Hash Value",
                },
              ],
              [
                {
                  "alignment": "center",
                  "bold": true,
                  "color": "#1e293b",
                  "fontSize": 7,
                  "margin": [
                    3,
                    3,
                    3,
                    3,
                  ],
                  "text": "#0001",
                },
                {
                  "color": "#1e293b",
                  "fontSize": 7,
                  "margin": [
                    3,
                    3,
                    3,
                    3,
                  ],
                  "text": "SHA-256",
                },
                {
                  "color": "#64748b",
                  "font": "Courier",
                  "fontSize": 6,
                  "margin": [
                    3,
                    3,
                    3,
                    3,
                  ],
                  "text": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
                },
              ],
            ],
            "headerRows": 1,
            "widths": [
              50,
              60,
              "*",
            ],
          },
        },
      ],
    },
    {
      "margin": [
        0,
        0,
        0,
        10,
      ],
      "stack": [
        {
          "bold": true,
          "color": "#1e293b",
          "fontSize": 10,
          "margin": [
            0,
            0,
            0,
            4,
          ],
          "text": "Digital Signatures",
        },
        {
          "columns": [
            {
              "layout": {
                "hLineColor": "[Function]",
                "hLineWidth": "[Function]",
                "vLineColor": "[Function]",
                "vLineWidth": "[Function]",
              },
              "table": {
                "body": [
                  [
                    {
                      "bold": true,
                      "color": "#0D9488",
                      "fillColor": "#CCFBF1",
                      "fontSize": 7,
                      "margin": [
                        6,
                        3,
                        6,
                        3,
                      ],
                      "text": "✓ Entry #0001 — Digitally Signed",
                    },
                  ],
                ],
                "widths": [
                  "auto",
                ],
              },
              "width": "auto",
            },
            {
              "color": "#64748b",
              "fontSize": 7,
              "margin": [
                6,
                4,
                0,
                0,
              ],
              "text": "Lab Reception — Jun 01, 2026, 13:00 GMT+4",
            },
          ],
          "margin": [
            0,
            0,
            0,
            3,
          ],
        },
      ],
    },
  ],
  "defaultStyle": {
    "font": "Roboto",
    "fontSize": 8,
  },
  "footer": {
    "alignment": "center",
    "color": "#94a3b8",
    "fontSize": 7,
    "margin": [
      25,
      10,
      25,
      0,
    ],
    "text": "Page 1 of 1 | This document is a certified Chain of Custody record",
  },
  "pageMargins": [
    25,
    25,
    25,
    40,
  ],
  "pageOrientation": undefined,
  "pageSize": "A4",
  "stylesKeys": [
    "bilingualHeader",
    "caseNumber",
    "companyContact",
    "companyName",
    "companyTagline",
    "documentSubtitle",
    "documentTitle",
    "footer",
    "footerTagline",
    "header",
    "infoBoxHeader",
    "jobIdBadge",
    "label",
    "priorityBadge",
    "registeredBy",
    "roleBadge",
    "sectionTitle",
    "signatureLabel",
    "signatureLine",
    "socialLink",
    "subheader",
    "tableCell",
    "tableCellCenter",
    "tableCellRight",
    "tableHeader",
    "termsText",
    "termsTitle",
    "totalLabel",
    "totalValue",
    "value",
    "valueBold",
    "watermark",
  ],
  "watermark": undefined,
}
`;

exports[`PDF builder characterization (golden snapshots) > buildOfficeReceiptDocument — static shape + footer 1`] = `
{
  "content": [
    {
      "margin": [
        0,
        0,
        0,
        12,
      ],
      "stack": [
        {
          "alignment": "center",
          "bold": true,
          "color": "#1e293b",
          "fontSize": 14,
          "text": "Acme Data Recovery LLC",
        },
        {
          "alignment": "center",
          "color": "#64748b",
          "fontSize": 8,
          "lineHeight": 1.1,
          "margin": [
            0,
            2,
            0,
            0,
          ],
          "text": "12 Lab Street, Muscat, Oman",
        },
        {
          "alignment": "center",
          "color": "#64748b",
          "fontSize": 8,
          "lineHeight": 1.1,
          "margin": [
            0,
            0,
            0,
            0,
          ],
          "text": "Tel: +968 1234 5678",
        },
        {
          "alignment": "center",
          "color": "#64748b",
          "fontSize": 8,
          "lineHeight": 1.1,
          "margin": [
            0,
            0,
            0,
            0,
          ],
          "text": "Email: lab@acme.test",
        },
      ],
    },
    {
      "canvas": [
        {
          "lineColor": "#ef4444",
          "lineWidth": 0.5,
          "type": "line",
          "x1": 0,
          "x2": 525,
          "y1": 0,
          "y2": 0,
        },
      ],
      "margin": [
        0,
        0,
        0,
        12,
      ],
    },
    {
      "alignment": "center",
      "bold": true,
      "color": "#1E3A5F",
      "fontSize": 16,
      "margin": [
        0,
        0,
        0,
        0,
      ],
      "text": "DEVICE CHECK-IN RECEIPT",
    },
    {
      "alignment": "center",
      "color": "#64748b",
      "fontSize": 10,
      "margin": [
        0,
        1,
        0,
        6,
      ],
      "text": "Office Copy",
    },
    {
      "columns": [
        {
          "stack": [
            {
              "layout": {
                "hLineColor": "[Function]",
                "hLineWidth": "[Function]",
                "vLineColor": "[Function]",
                "vLineWidth": "[Function]",
              },
              "table": {
                "body": [
                  [
                    {
                      "columnGap": 6,
                      "columns": [
                        {
                          "height": 13,
                          "margin": [
                            0,
                            0,
                            0,
                            0,
                          ],
                          "svg": "[binary:257]",
                          "width": 13,
                        },
                        {
                          "style": "bilingualHeader",
                          "text": "Customer Information",
                          "width": "auto",
                        },
                        {
                          "text": "",
                          "width": "*",
                        },
                        {
                          "text": "",
                          "width": 0,
                        },
                      ],
                      "fillColor": "#f8fafc",
                      "margin": [
                        6,
                        4,
                        6,
                        4,
                      ],
                    },
                  ],
                  [
                    {
                      "margin": [
                        8,
                        5,
                        8,
                        6,
                      ],
                      "stack": [
                        {
                          "columns": [
                            {
                              "color": "#64748b",
                              "fontSize": 8,
                              "text": "Name:",
                              "width": 55,
                            },
                            {
                              "color": "#1e293b",
                              "fontSize": 9,
                              "text": "Jane Client",
                              "width": "*",
                            },
                          ],
                          "margin": [
                            0,
                            0,
                            0,
                            2,
                          ],
                        },
                        {
                          "columns": [
                            {
                              "color": "#64748b",
                              "fontSize": 8,
                              "text": "Company:",
                              "width": 55,
                            },
                            {
                              "color": "#1e293b",
                              "fontSize": 9,
                              "text": "Client Holdings",
                              "width": "*",
                            },
                          ],
                          "margin": [
                            0,
                            0,
                            0,
                            2,
                          ],
                        },
                        {
                          "columns": [
                            {
                              "color": "#64748b",
                              "fontSize": 8,
                              "text": "Phone:",
                              "width": 55,
                            },
                            {
                              "color": "#1e293b",
                              "fontSize": 9,
                              "text": "+968 9999 0000",
                              "width": "*",
                            },
                          ],
                          "margin": [
                            0,
                            0,
                            0,
                            2,
                          ],
                        },
                        {
                          "columns": [
                            {
                              "color": "#64748b",
                              "fontSize": 8,
                              "text": "Email:",
                              "width": 55,
                            },
                            {
                              "color": "#1e293b",
                              "fontSize": 9,
                              "text": "jane@client.test",
                              "width": "*",
                            },
                          ],
                          "margin": [
                            0,
                            0,
                            0,
                            2,
                          ],
                        },
                        {
                          "columns": [
                            {
                              "color": "#64748b",
                              "fontSize": 8,
                              "text": "Reference:",
                              "width": 55,
                            },
                            {
                              "color": "#1e293b",
                              "fontSize": 9,
                              "text": "REF-1234",
                              "width": "*",
                            },
                          ],
                          "margin": [
                            0,
                            0,
                            0,
                            2,
                          ],
                        },
                      ],
                    },
                  ],
                ],
                "widths": [
                  "*",
                ],
              },
            },
          ],
          "width": "50%",
        },
        {
          "text": "",
          "width": 8,
        },
        {
          "stack": [
            {
              "layout": {
                "hLineColor": "[Function]",
                "hLineWidth": "[Function]",
                "vLineColor": "[Function]",
                "vLineWidth": "[Function]",
              },
              "table": {
                "body": [
                  [
                    {
                      "columnGap": 6,
                      "columns": [
                        {
                          "height": 13,
                          "margin": [
                            0,
                            0,
                            0,
                            0,
                          ],
                          "svg": "[binary:468]",
                          "width": 13,
                        },
                        {
                          "style": "bilingualHeader",
                          "text": "Case Details",
                          "width": "auto",
                        },
                        {
                          "text": "",
                          "width": "*",
                        },
                        {
                          "text": "",
                          "width": 0,
                        },
                      ],
                      "fillColor": "#f8fafc",
                      "margin": [
                        6,
                        4,
                        6,
                        4,
                      ],
                    },
                  ],
                  [
                    {
                      "margin": [
                        8,
                        5,
                        8,
                        6,
                      ],
                      "stack": [
                        {
                          "columns": [
                            {
                              "color": "#64748b",
                              "fontSize": 8,
                              "text": "Case ID:",
                              "width": 55,
                            },
                            {
                              "color": "#1e293b",
                              "fontSize": 9,
                              "text": "CASE-0042",
                              "width": "*",
                            },
                          ],
                          "margin": [
                            0,
                            0,
                            0,
                            2,
                          ],
                        },
                        {
                          "columns": [
                            {
                              "color": "#64748b",
                              "fontSize": 8,
                              "text": "Service:",
                              "width": 55,
                            },
                            {
                              "color": "#1e293b",
                              "fontSize": 9,
                              "text": "Hard Drive Recovery",
                              "width": "*",
                            },
                          ],
                          "margin": [
                            0,
                            0,
                            0,
                            2,
                          ],
                        },
                        {
                          "columns": [
                            {
                              "color": "#64748b",
                              "fontSize": 8,
                              "text": "Priority:",
                              "width": 55,
                            },
                            {
                              "color": "#1e293b",
                              "fontSize": 9,
                              "text": "High",
                              "width": "*",
                            },
                          ],
                          "margin": [
                            0,
                            0,
                            0,
                            2,
                          ],
                        },
                        {
                          "columns": [
                            {
                              "color": "#64748b",
                              "fontSize": 8,
                              "text": "Problem:",
                              "width": 55,
                            },
                            {
                              "color": "#1e293b",
                              "fontSize": 9,
                              "text": "Clicking noise on spin-up.",
                              "width": "*",
                            },
                          ],
                          "margin": [
                            0,
                            0,
                            0,
                            2,
                          ],
                        },
                        {
                          "columns": [
                            {
                              "color": "#64748b",
                              "fontSize": 8,
                              "text": "Date:",
                              "width": 55,
                            },
                            {
                              "color": "#1e293b",
                              "fontSize": 9,
                              "text": "01 Jun 2026, 13:00",
                              "width": "*",
                            },
                          ],
                          "margin": [
                            0,
                            0,
                            0,
                            2,
                          ],
                        },
                      ],
                    },
                  ],
                ],
                "widths": [
                  "*",
                ],
              },
            },
          ],
          "width": "50%",
        },
      ],
      "margin": [
        0,
        0,
        0,
        8,
      ],
    },
    {
      "stack": [
        {
          "columnGap": 6,
          "columns": [
            {
              "text": "",
              "width": 0,
            },
            {
              "style": "bilingualHeader",
              "text": "Device(s) Received",
              "width": "auto",
            },
            {
              "text": "",
              "width": "*",
            },
            {
              "text": "",
              "width": 0,
            },
          ],
          "margin": [
            0,
            4,
            0,
            5,
          ],
        },
        {
          "layout": {
            "hLineColor": "[Function]",
            "hLineWidth": "[Function]",
            "vLineColor": "[Function]",
            "vLineWidth": "[Function]",
          },
          "margin": [
            0,
            0,
            0,
            8,
          ],
          "table": {
            "body": [
              [
                {
                  "alignment": "left",
                  "color": "#1e293b",
                  "fillColor": "#F1F5F9",
                  "style": "tableHeader",
                  "text": "Device Type",
                },
                {
                  "alignment": "left",
                  "color": "#1e293b",
                  "fillColor": "#F1F5F9",
                  "style": "tableHeader",
                  "text": "Brand",
                },
                {
                  "alignment": "left",
                  "color": "#1e293b",
                  "fillColor": "#F1F5F9",
                  "style": "tableHeader",
                  "text": "Capacity",
                },
                {
                  "alignment": "left",
                  "color": "#1e293b",
                  "fillColor": "#F1F5F9",
                  "style": "tableHeader",
                  "text": "Serial Number",
                },
                {
                  "alignment": "left",
                  "color": "#1e293b",
                  "fillColor": "#F1F5F9",
                  "style": "tableHeader",
                  "text": "Role",
                },
              ],
              [
                {
                  "columnGap": 5,
                  "columns": [
                    {
                      "height": 12,
                      "margin": [
                        0,
                        1,
                        0,
                        0,
                      ],
                      "svg": "[binary:386]",
                      "width": 12,
                    },
                    {
                      "color": "#1e293b",
                      "fontSize": 8,
                      "text": "HDD",
                      "width": "auto",
                    },
                  ],
                  "margin": [
                    2,
                    3,
                    2,
                    3,
                  ],
                },
                {
                  "style": "tableCell",
                  "text": "Seagate",
                },
                {
                  "style": "tableCell",
                  "text": "1.0 TB",
                },
                {
                  "style": "tableCell",
                  "text": "SN-ABC-001",
                },
                {
                  "layout": {
                    "hLineWidth": "[Function]",
                    "paddingBottom": "[Function]",
                    "paddingLeft": "[Function]",
                    "paddingRight": "[Function]",
                    "paddingTop": "[Function]",
                    "vLineWidth": "[Function]",
                  },
                  "margin": [
                    2,
                    3,
                    2,
                    3,
                  ],
                  "table": {
                    "body": [
                      [
                        {
                          "alignment": "center",
                          "bold": true,
                          "color": "#DC2626",
                          "fillColor": "#FEF2F2",
                          "fontSize": 8,
                          "margin": [
                            8,
                            2,
                            8,
                            2,
                          ],
                          "noWrap": true,
                          "text": "Patient",
                        },
                      ],
                    ],
                    "widths": [
                      "auto",
                    ],
                  },
                },
              ],
            ],
            "headerRows": 1,
            "widths": [
              100,
              75,
              85,
              125,
              "*",
            ],
          },
        },
      ],
    },
    {
      "layout": {
        "hLineColor": "[Function]",
        "hLineWidth": "[Function]",
        "vLineColor": "[Function]",
        "vLineWidth": "[Function]",
      },
      "margin": [
        0,
        6,
        0,
        6,
      ],
      "table": {
        "body": [
          [
            {
              "margin": [
                8,
                6,
                8,
                6,
              ],
              "stack": [
                {
                  "bold": true,
                  "fontSize": 9,
                  "margin": [
                    0,
                    0,
                    0,
                    3,
                  ],
                  "text": "Terms & Conditions",
                },
                {
                  "color": "#64748b",
                  "fontSize": 7,
                  "lineHeight": 1.2,
                  "text": "By signing as an authorized signatory, I authorize Future Space LLC (Space Recovery) to proceed and acknowledge that the T&C apply to this engagement. A hard copy of the T&C is available at reception on request.",
                },
              ],
            },
          ],
        ],
        "widths": [
          "*",
        ],
      },
    },
    {
      "margin": [
        0,
        8,
        0,
        6,
      ],
      "style": "registeredBy",
      "text": "Registered by: Lab Reception",
    },
    {
      "columns": [
        {
          "stack": [
            {
              "canvas": [
                {
                  "lineColor": "#64748b",
                  "lineWidth": 0.5,
                  "type": "line",
                  "x1": 0,
                  "x2": 180,
                  "y1": 28,
                  "y2": 28,
                },
              ],
            },
            {
              "alignment": "center",
              "margin": [
                0,
                3,
                0,
                0,
              ],
              "style": "signatureLabel",
              "text": "Customer Signature",
            },
          ],
          "width": 200,
        },
        {
          "text": "",
          "width": "*",
        },
        {
          "stack": [
            {
              "canvas": [
                {
                  "lineColor": "#64748b",
                  "lineWidth": 0.5,
                  "type": "line",
                  "x1": 0,
                  "x2": 180,
                  "y1": 28,
                  "y2": 28,
                },
              ],
            },
            {
              "alignment": "center",
              "margin": [
                0,
                3,
                0,
                0,
              ],
              "style": "signatureLabel",
              "text": "Company Representative",
            },
          ],
          "width": 200,
        },
      ],
      "margin": [
        0,
        0,
        0,
        0,
      ],
    },
  ],
  "defaultStyle": {
    "font": "Roboto",
  },
  "footer": {
    "margin": [
      35,
      10,
      35,
      25,
    ],
    "stack": [
      {
        "margin": [
          0,
          0,
          0,
          1,
        ],
        "style": "footerTagline",
        "text": "Recovered. Verified. Delivered.",
      },
      {
        "alignment": "center",
        "color": "#64748b",
        "fontSize": 8,
        "margin": [
          0,
          0,
          0,
          6,
        ],
        "text": "https://acme.test",
      },
    ],
  },
  "pageMargins": [
    35,
    30,
    35,
    95,
  ],
  "pageOrientation": undefined,
  "pageSize": "A4",
  "stylesKeys": [
    "bilingualHeader",
    "caseNumber",
    "companyContact",
    "companyName",
    "companyTagline",
    "documentSubtitle",
    "documentTitle",
    "footer",
    "footerTagline",
    "header",
    "infoBoxHeader",
    "jobIdBadge",
    "label",
    "priorityBadge",
    "registeredBy",
    "roleBadge",
    "sectionTitle",
    "signatureLabel",
    "signatureLine",
    "socialLink",
    "subheader",
    "tableCell",
    "tableCellCenter",
    "tableCellRight",
    "tableHeader",
    "termsText",
    "termsTitle",
    "totalLabel",
    "totalValue",
    "value",
    "valueBold",
    "watermark",
  ],
  "watermark": undefined,
}
`;
